--- a/gb/17/6/23/n9299834.md
+++ b/gb/17/6/23/n9299834.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fxhdff3615/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>谢天奇：三大征兆 朝鲜半岛局势走向何方？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/06/GettyImages-673122432@1200x1200-600x400.jpg" />
 <h6>瓦姆比尔去世以及朝鲜再测试火箭引擎后，美军加速部署，喊出“准备今晚开战”口号，中方相应在东北边境部署空降兵，这意味着美中等各方对朝鲜军事行动的部署已在进行之中。日本战后70多年来，与美方关系密切的日本政府首次出面播放朝鲜导弹袭击避难公告，进一步佐证了朝鲜半岛战争危机或迫在眉睫。(JUNG YEON-JE/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年06月24日讯】近期，在朝鲜被判15年劳教的美国大学生奥托．瓦姆比尔回到美国一个星期后死亡，引起舆论广泛关注，掀起谴责朝鲜<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权的浪潮。金正恩政权则在中美举行高层对话之际，再度测试火箭引擎，刺激朝鲜半岛紧张局势。</p>
+	<p>【大纪元2017年06月24日讯】近期，在朝鲜被判15年劳教的美国大学生奥托．瓦姆比尔回到美国一个星期后死亡，引起舆论广泛关注，掀起谴责朝鲜<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权的浪潮。金正恩政权则在中美举行高层对话之际，再度测试火箭引擎，刺激朝鲜半岛紧张局势。</p>
 <p>随着局势升级，美国军方传出更新对朝军事作战计划的消息；美国新航母福特号提前服役；驻韩美军喊出“准备今晚开战”口号。而中方在东北边境部署空降兵；日本政府播放朝鲜导弹袭击避难公告；朝鲜半岛战争风险或一触即发。</p>
-<p>（上接：<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/17/6/5/n9229477.md#1">谢天奇：川普强硬回应金正恩 习释弃朝信号</a>）</p>
-<h2>美大学生人质去世 <ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>立誓言</h2>
+<p>（上接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/6/5/n9229477.md#1">谢天奇：川普强硬回应金正恩 习释弃朝信号</a>）</p>
+<h2>美大学生人质去世 <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>立誓言</h2>
 <p>美国当地时间6月19日下午，从朝鲜获释的美国22岁大学生奥托．瓦姆比尔的家人宣布：儿子瓦姆比尔去世。</p>
 <p>瓦姆比尔于2016年1月在朝鲜旅行的过程中，被指因试图窃取酒店内的一幅宣传海报被捕，同年3月16日，被朝鲜最高法院以阴谋颠覆国家罪判处15年劳动教养。</p>
-<p>在美国<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）政府的奔走营救下，被关押了17个月的瓦姆比尔于6月13日晚间返回俄亥俄州辛辛那提家乡。瓦姆比尔回到美国后一直处于昏迷状态。美国医生发现瓦姆比尔的大脑严重受损。据报，瓦姆比尔一年多前已陷入昏迷。外界质疑，朝鲜到底用了什么手段残害瓦姆比尔。</p>
+<p>在美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）政府的奔走营救下，被关押了17个月的瓦姆比尔于6月13日晚间返回俄亥俄州辛辛那提家乡。瓦姆比尔回到美国后一直处于昏迷状态。美国医生发现瓦姆比尔的大脑严重受损。据报，瓦姆比尔一年多前已陷入昏迷。外界质疑，朝鲜到底用了什么手段残害瓦姆比尔。</p>
 <p>瓦姆比尔去世后，美国总统川普随后发表声明，向瓦姆比尔的家人表示慰问，并谴责朝鲜方面的“残暴”行为。声明说，瓦姆比尔的死亡进一步坚定了美国政府阻止此类悲剧发生的决心。川普说：“这（朝鲜）是一个残酷的政权，我们对付得了它。”</p>
 <p>美国驻联合国大使尼基．黑利（Nikki Haley）主张对朝鲜核弹导弹计划采取更严厉的制裁措施，她说：“无数人死在了朝鲜罪恶政权的手中，不过奥托．瓦姆比尔的遭遇更触动美国人的心灵。”“这也将永远提醒我们朝鲜独裁的野蛮本性。”</p>
 <h2>美国官员证实：朝鲜再测试火箭引擎</h2>
-<p>就在瓦姆比尔去世引发美国舆情悲愤之际，朝鲜<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权却再度测试火箭引擎。</p>
+<p>就在瓦姆比尔去世引发美国舆情悲愤之际，朝鲜<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>政权却再度测试火箭引擎。</p>
 <p>美国CNN6月21日援引多名美国政府当局人士的话披露，美国侦查卫星捕捉到，与朝鲜地下核试验场相通的一个坑道入口正在进行某种形式的改建。此前有消息指，朝鲜已在该核试验场做好了随时进行核试验的准备。</p>
 <p>当局人士说，不清楚这是否是朝鲜第六次核试验逼近的征兆，但认为朝鲜有可能在中美外交及安全对话召开时进行核实验。</p>
 <p>6月22日，美国官员对媒体证实，朝鲜当局日前再度进行火箭引擎测试。美方评估，这是朝鲜今年以来一连串引擎和导弹测试的最新一次行动，可能是为了洲际弹道导弹三节中的最小一节。目前还不清楚测试结果。</p>
@@ -26,7 +26,7 @@
 <p>6月19日下午瓦姆比尔去世后，美国国内要求“惩罚”朝鲜的声音正在扩散。韩联社当天披露，美国2架B?1B战略轰炸机20日将飞抵韩半岛，与韩空军F?15K战斗机进行联合军演，展现遏制朝鲜军事威胁的意志。</p>
 <p>美国CNN6月21日援引美国政府当局人士的话披露，最近美军已更新了对朝军事攻击的作战计划。朝鲜若实施核实验，川普将对是否实施该作战计划做出决断。</p>
 <p>美军《国防新闻》（Defense News）6月22日报导，美军航母“福特号”（USS Gerald R. Ford CVN-78）在5月26日完成验收测试，并经美国海军检验及调查委员会（Navy’s Board of Inspection and Survey）完成评估后，在6月1日完成交付海军，并计划7月开始服役。</p>
-<p>福特号原定首次部署时间约在2022年，但由于眼下美军现役航母的部署任务重，“卡尔文森号”（USS Carl Vinson CVN 70）与“里根号”（USS Ronald Reagan CVN 76）等航母集结朝鲜半岛，应对<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>局势。因此美军打算跳过对“福特号”进行这项测试。这样使“福特号”的首次部署就有望提前至2019年或2020年。</p>
+<p>福特号原定首次部署时间约在2022年，但由于眼下美军现役航母的部署任务重，“卡尔文森号”（USS Carl Vinson CVN 70）与“里根号”（USS Ronald Reagan CVN 76）等航母集结朝鲜半岛，应对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>局势。因此美军打算跳过对“福特号”进行这项测试。这样使“福特号”的首次部署就有望提前至2019年或2020年。</p>
 <p>“福特号”是美国海军全新打造的最大核动力超级航空母舰，重10万吨，船身长1100呎，航速超过30节、约每小时55公里。亦是美军第一艘配备全电子装备、配置新型的舰载机起降系统等新一代尖端设备的航母。</p>
 <p>6月22日，CBS报导，驻韩美国陆军第八军团的口号就是“准备今晚开战”（ready to fight tonight），使用爱国者导弹把北韩发射的导弹打下来。</p>
 <p>该军团的6?52防空导弹营指挥官派利尼中校（Lt. Col. Marc Pelini）对战地记者说，他们的军营所在地为驻韩美军的最前线，正在等待川普总统及军方总司令的命令。</p>
@@ -41,14 +41,14 @@
 <p>日本政府人士透露，为了防范朝鲜可能对日本的导弹袭击，日本政府23日开始将在五大全国放送的电视台上播放如何躲避朝鲜导弹袭击的避难方法广告片。这是日本战后70多年来，首次由政府出面播放与战争有关的避难公告。</p>
 <p>日本政府目前认为，日本有可能会遭到朝鲜导弹的袭击，因此有必要在全国拉响警报。消息说，整个广告片的时间长达30秒，开头部分将播放朝鲜导弹可能袭击日本的全国瞬时警报，然后介绍避难方法：一是躲入牢固的建筑物或地下避难；二是在附近没有建筑物的情况下，在物体的背阴处抱头卧地；三、在屋内的话，远离有窗户的地方躲入没有窗户的房间。</p>
 <p>这一广告片将连续播放2个星期，到7月6号结束。同时，日本政府还将从6月23日至25日在全国70家报纸上，以及6月26日至7月9日在全国主要网站上，刊登同样内容的广告。</p>
-<h2><ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E6%88%98%E4%BA%89%E5%8D%B1%E6%9C%BA.md#1">朝鲜半岛战争危机</a>或一触即发</h2>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E6%88%98%E4%BA%89%E5%8D%B1%E6%9C%BA.md#1">朝鲜半岛战争危机</a>或一触即发</h2>
 <p>被朝鲜关押了17个月的瓦姆比尔为何在近期获准返回美国，却又随即去世，内幕尚不得而知。但瓦姆比尔之死，无异于金正恩政权对美国政府及美国人民的一个死亡恐吓。瓦姆比尔之死引起了美国政界乃至整个社会的愤怒，极大加强了川普政府加强制裁朝鲜乃至对朝动武的民意基础。</p>
-<p>就在国际舆情激愤之际，朝鲜金正恩政权却再度测试火箭引擎，其歇斯底里、疯狂挑衅美国的举动无法按常理解释。如果考虑到朝鲜金家政权受中共江泽民集团扶持、操控的内幕，答案或许就明朗了。（详情请看：<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a>）</p>
-<p>此次中美高层对话的焦点议题就是如何解决朝鲜核武威胁，时间点又恰逢<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>“七一”访港前夕。同期，习近平、王岐山同步离京分别到山西、贵州考察；习当局加速清洗金融圈，拿下安邦集团董事长吴小辉与福建富商黄如论等曾庆红家族及江泽民集团的“白手套”人物。习阵营强势回击江派近期的反扑动作。</p>
+<p>就在国际舆情激愤之际，朝鲜金正恩政权却再度测试火箭引擎，其歇斯底里、疯狂挑衅美国的举动无法按常理解释。如果考虑到朝鲜金家政权受中共江泽民集团扶持、操控的内幕，答案或许就明朗了。（详情请看：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a>）</p>
+<p>此次中美高层对话的焦点议题就是如何解决朝鲜核武威胁，时间点又恰逢<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>“七一”访港前夕。同期，习近平、王岐山同步离京分别到山西、贵州考察；习当局加速清洗金融圈，拿下安邦集团董事长吴小辉与福建富商黄如论等曾庆红家族及江泽民集团的“白手套”人物。习阵营强势回击江派近期的反扑动作。</p>
 <p>敏感时刻，金正恩选在中美举行高层对话之际进行测试火箭引擎，再度验证了，朝鲜历次核武相关行动均与中共高曾博弈升级时间点相吻合。“十九大”前夕，习阵营清洗动作已逼近江泽民、曾庆红家族及其本人，面临死劫的江泽民集团很可能操控朝鲜核武进行孤注一掷的垂死反扑。</p>
-<p>对<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局而言，“七一”访港在即，随后将是北戴河会议及“十九大”。解决朝鲜核武危机，废除江派的“核恐吓”，是习当局防范江派的垂死反扑，确保局势平稳过渡的现实需求。</p>
+<p>对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局而言，“七一”访港在即，随后将是北戴河会议及“十九大”。解决朝鲜核武危机，废除江派的“核恐吓”，是习当局防范江派的垂死反扑，确保局势平稳过渡的现实需求。</p>
 <p>川普当选美国总统后，尤其今年4月前后至今，对朝鲜核武问题强硬表态，并加强部署军队、航母，蓄势待发，志在必得。瓦姆比尔之死，以及金正恩再度测试火箭引擎，将会促发美国川普政府凭借高涨的民意，加速采取包括军事打击在内的各种行动，以尽快彻底解决朝鲜核武问题。</p>
-<p>瓦姆比尔去世以及朝鲜再测试火箭引擎后，美军加速部署，喊出“准备今晚开战”口号，中方相应在东北边境部署空降兵，这意味着美中等各方对朝鲜军事行动的部署已在进行之中。日本战后70多年来，与美方关系密切的日本政府首次出面播放朝鲜导弹袭击避难公告，进一步佐证了<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E6%88%98%E4%BA%89%E5%8D%B1%E6%9C%BA.md#1">朝鲜半岛战争危机</a>或迫在眉睫。</p>
+<p>瓦姆比尔去世以及朝鲜再测试火箭引擎后，美军加速部署，喊出“准备今晚开战”口号，中方相应在东北边境部署空降兵，这意味着美中等各方对朝鲜军事行动的部署已在进行之中。日本战后70多年来，与美方关系密切的日本政府首次出面播放朝鲜导弹袭击避难公告，进一步佐证了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E6%88%98%E4%BA%89%E5%8D%B1%E6%9C%BA.md#1">朝鲜半岛战争危机</a>或迫在眉睫。</p>
 <p>朝鲜半岛危机的走向，取决于美日韩等国的行动决心、中共高层习江斗的博弈态势，以及朝鲜金正恩政权的后续表现。下一步，各方如何动作，以及朝鲜核武危机将被何种方式解决，这与东亚局势、中国时局、乃至国际局势的发展息息相关，应是外界关注的焦点。#</p>
 <p>（大纪元2017年6月23日首发，转载请注明出处。）</p>
 <p>责任编辑：李昊</p>
@@ -57,41 +57,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/4/17/n9048019.md#1">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/4/21/n9062513.md#1">谢天奇：习正在行动？5时间点攸关金正恩命运</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/4/24/n9071269.md#1">谢天奇：习备战朝核危机 栗战书紧急访俄</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/17/n9048019.md#1">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/21/n9062513.md#1">谢天奇：习正在行动？5时间点攸关金正恩命运</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/24/n9071269.md#1">谢天奇：习备战朝核危机 栗战书紧急访俄</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9926680.md#1" target="_blank">文武：鲁迅在中共破坏中国传统文化中的作用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12847960.md#1">蒋经国回忆父亲过世的那段日子</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/6/n12862138.md#1">【未解之谜】“妈妈我记得你” 神奇的胎内记忆</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870071.md#1">【时事军事】美海军惊人计划 快速打击剑指中共</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871790.md#1">【新闻看点】美对台新规踩红线 中共诡异没声</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/11/n12872038.md#1">专访新书作家：成功亚裔与种族歧视的背后</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869998.md#1">山东13岁女孩遭强暴案情节曲折 嫌犯被抓</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867846.md#1">【新闻看点】弗洛伊德案反转？台朝野誓死抗共</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870127.md#1">北京施压 马云创办的湖畔大学暂停招生</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870066.md#1">被刘若英直问从来没娱乐 刘德华发飙原因曝光</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869071.md#1">林心如配戴上亿珠宝 4岁女儿爱卡通塑胶项链</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867956.md#1">拍杂志封面 范冰冰诠释三个不同年龄层容貌</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867595.md#1">头顶有1大健脑穴位 每天按3分钟 远离失智失眠</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870136.md#1">腰围3周减11公分！早上喝1杯瘦小腹 还让视力变好</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12849517.md#1">免疫力是最好的药 抗病毒抗菌秘密就在你体内</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869106.md#1">听老牌空姐的话 搭机时别让头部靠着窗户</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12870791.md#1">谷歌地图乱带路 害印尼男子差点娶错老婆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/23/n9299834.htm">谢天奇：三大征兆 朝鲜半岛局势走向何方？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/23/n9299834.htm">谢天奇：三大征兆 朝鲜半岛局势走向何方？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fxhdff3615/djy/blob/master/gb/17/6/23/n9299834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/6/23/n9299834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
